[gd_scene load_steps=6 format=3 uid="uid://5xywxwvado32"]

[ext_resource type="Script" path="res://UI/upgrade_menu.gd" id="1_cj0rc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka4gy"]
bg_color = Color(0.498039, 0.458824, 0.478431, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.597656, 0.597656, 0.597656, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtjbc"]
bg_color = Color(0.0627451, 0.282353, 0.4, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.597656, 0.597656, 0.597656, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qj4ug"]
bg_color = Color(0.156863, 0.521569, 0.717647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.597656, 0.597656, 0.597656, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_101y4"]
Button/styles/disabled = SubResource("StyleBoxFlat_ka4gy")
Button/styles/hover = SubResource("StyleBoxFlat_xtjbc")
Button/styles/normal = SubResource("StyleBoxFlat_qj4ug")

[node name="UpgradeMenu" type="VBoxContainer"]
z_index = 10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -33.0
offset_right = 400.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cj0rc")

[node name="VBoxContainer1" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer1"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer1/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "Damage Upgrade"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer1"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer1/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "Increase your damage by x2 (current: 1x)"
autowrap_mode = 3

[node name="BuyButton1" type="Button" parent="VBoxContainer1" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "10 A"

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer2"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer2/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "Health Upgrade"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer2"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer2/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "Increase your max health by 50 (current: 100)"
autowrap_mode = 3

[node name="BuyButton2" type="Button" parent="VBoxContainer2" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="VBoxContainer3" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer3"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer3/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "Speed Upgrade"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer3"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer3/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "Increase your speed to x1.5"
autowrap_mode = 3

[node name="BuyButton3" type="Button" parent="VBoxContainer3" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="VBoxContainer4" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer4"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer4/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "Algee Upgrade"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer4"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer4/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "Increase the algees you get by x2 (current: x1)"
autowrap_mode = 3

[node name="BuyButton4" type="Button" parent="VBoxContainer4"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="VBoxContainer5" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer5"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer5/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "???"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer5"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer5/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "LOCKED"
autowrap_mode = 3

[node name="BuyButton5" type="Button" parent="VBoxContainer5" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="VBoxContainer6" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer6"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer6/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "???"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer6"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer6/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "LOCKED"
autowrap_mode = 3

[node name="BuyButton6" type="Button" parent="VBoxContainer6" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="VBoxContainer7" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer7"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer7/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "???"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer7"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer7/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "LOCKED"
autowrap_mode = 3

[node name="BuyButton7" type="Button" parent="VBoxContainer7" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="VBoxContainer8" type="HBoxContainer" parent="."]
z_index = 10
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradeContainer" type="PanelContainer" parent="VBoxContainer8"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3

[node name="UpgradeName" type="Label" parent="VBoxContainer8/UpgradeContainer"]
z_index = 10
layout_mode = 2
text = "???"

[node name="DescriptionContainer" type="PanelContainer" parent="VBoxContainer8"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.08

[node name="Description" type="Label" parent="VBoxContainer8/DescriptionContainer"]
z_index = 10
layout_mode = 2
text = "LOCKED"
autowrap_mode = 3

[node name="BuyButton8" type="Button" parent="VBoxContainer8" groups=["BuyButtons"]]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme = SubResource("Theme_101y4")
text = "Buy"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer1/BuyButton1" to="." method="_on_buy_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer2/BuyButton2" to="." method="_on_buy_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer3/BuyButton3" to="." method="_on_buy_button_3_pressed"]
[connection signal="pressed" from="VBoxContainer4/BuyButton4" to="." method="_on_buy_button_4_pressed"]
